'more. you can commit that though'

--- a/css/tables.css
+++ b/css/tables.css
@@ -54,7 +54,12 @@ h3 {
     margin-bottom: 0;
 }
 
-pre {
+code {
+    white-space: pre;
     margin: 0;
     font-family: "FreeMono";
+}
+
+code kksel {
+    font-weight: bold;
 }
