--- a/docs/figures1/css/tables.css
+++ b/docs/figures1/css/tables.css
@@ -1,40 +1,63 @@
 body {
-    font-family: sans-serif;
+    font-family: "Source Sans Pro";
+    /*font-face: Verdana;*/
     font-size: 10pt;
+}
+
+
+
+code {
+    white-space: pre;
+    margin: 0;
+    font-family: "Liberation Mono";
+    font-size: 1em;
 }
 
 h1 {
     text-align: center;
     margin: 0;
     padding: 0;
-    font-size: 3em;
+    font-size: 1.5em;
 }
+
+
+h3 {
+    /* text-align: center; */
+    margin: 5px 0px 0px 5px; /* top right bottom left */
+    font-size: 0.9em;
+    font-weight: normal;
+
+}
+
+
+div.element {
+    float: left;
+    margin: 10px 8px 0px 8px; /* top right bottom left */
+}
+
+div.new-element {
+    clear: left;
+}
+
 
 table {
     border: 1px solid black;
     border-spacing: 0; /* what got rid of the weird gaps under the headers */
+    margin: 0px 0px 0px 0px; /* top right bottom left */
     /* margin: 0 auto; */
 }
 
 th, td {
-    /* border: 1px dashed red; */ 
-    padding: 5px 5px; /* top&bottom right&left; internal padding in each cell */ 
+    /* border: 1px dashed red; */
+    padding: 3px 5px 3px 3px; /* top right bottom left */
     margin: 0;
 }
 
 thead th {
     text-align: left;
     border-bottom: 1px solid black;
-    /* background-color: #ddd; */
-}
-
-div.element {
-    float: left;
-    margin: 10px 10px; /* top&bottom left&right */
-}
-
-div.new-element {
-    clear: left;
+    font-weight: normal;
+    background-color: #ddd;
 }
 
 dl {
@@ -65,16 +88,6 @@ dd {
     margin-bottom: 40px;
 }
 
-h3 {
-    /* text-align: center; */
-    margin-bottom: 0;
-}
-
-code {
-    white-space: pre;
-    margin: 0;
-    font-family: "FreeMono";
-}
 
 code kksel {
     font-weight: bold;
