--- a/docs/figures1/css/tables.css
+++ b/docs/figures1/css/tables.css
@@ -19,7 +19,7 @@ code {
     border: 2px solid black;
     float: left;
     clear: left;
-    padding-bottom: 8px;
+    padding-bottom: 5px;
     max-width: 550px;
     margin-bottom: 40px;
 }
@@ -92,7 +92,7 @@ dl {
 
 dd, dt {
     float: left;
-    padding: 0px 0px 5px 5px; /* top right bottom left */
+    padding: 0px 0px 10px 5px; /* top right bottom left */
 }
 
 dt {
@@ -105,7 +105,7 @@ dd {
 }
 
 
-code kksel {
+code strong {
     font-weight: bold;
 }
 
