--- a/docs/figures1/css/tables.css
+++ b/docs/figures1/css/tables.css
@@ -27,7 +27,7 @@ code {
 
 h1 {
     text-align: center;
-    margin: 0;
+    margin: 0px 30px 0px 30px; /* top right bottom left */
     padding: 0;
     font-size: 1.5em;
 }
