more work on figures for what will be the 'experiments' chapter

--- a/docs/figures1/css/task.css
+++ b/docs/figures1/css/task.css
@@ -123,7 +123,13 @@ td {
     padding: 10px;
 }
 caption { 
+    font-size: 1.5em;
     border: 1px solid black;
     border-width: 1px 1px 0px 1px;
+    font-weight: bold;
+}
+
+.quadtitle {
+    text-align: center;
     font-weight: bold;
 }
