--- a/docs/figures1/css/task.css
+++ b/docs/figures1/css/task.css
@@ -121,6 +121,7 @@ table, td {
 td {
     width: 50%;
     padding: 10px;
+    vertical-align: top;
 }
 caption { 
     font-size: 1.5em;
@@ -132,4 +133,5 @@ caption {
 .quadtitle {
     text-align: center;
     font-weight: bold;
+    margin: 0 0 5px 0;
 }
